--- a/src/styles/buttons.css
+++ b/src/styles/buttons.css
@@ -5,3 +5,35 @@
   padding-left: 20%;
   padding-right: 20%;
 }
+
+.scrollable_buttons{
+  height: 45vh;
+  overflow-y:scroll;
+  overflow-x:hidden;
+  width: 25vw;
+  padding: 1vw;
+  scrollbar-width: normal;
+  scrollbar-color: #333;
+}
+
+.scrollable_buttons::-webkit-scrollbar {
+  background-color: white;
+  width: 0.4vw;
+}
+
+ 
+
+
+.scrollable_buttons::-webkit-scrollbar-thumb{
+  background-color: rgba(81, 146, 89, 1);
+  border-radius: 10px;
+}
+
+
+.scrollable_buttons::-webkit-scrollbar-track{
+  background-color: white;
+  /* box-shadow: inset 0 0 5px rgb(202, 202, 202); */
+  border: 1px solid lightgray;
+  border-radius: 10px;
+}
+
